@@ -1,5 +1,12 @@
 2000-07-04  Alexandre Oliva  <aoliva@redhat.com>
 
+	* armemu.h (GETSPSR): Call ARMul_GetSPSR().
+	* armsupp.c (ARMul_CPSRAltered): Zero out bits as they're
+	extracted from state->Cpsr, but preserve the unused bits.
+	(ARMul_GetCPSR): Get bits preserved in state->Cpsr.
+	(ARMul_GetSPSR, ARMul_FixCPSR): Use ARMul_GetCPSR() to
+	get the full CPSR word.
+
 	* armemu.h (PSR_FBITS, PSR_SBITS, PSR_XBITS, PSR_CBITS): New.
 	(SETPSR_F, SETPSR_S, SETPSR_X, SETPSR_C): New macros.
 	(SETPSR, SET_INTMODE, SETCC): Removed.
